syntax = "proto3";

package proto;

option go_package = "github.com/esafronov/yp-metrics/internal/grpc/proto";

message ListRequest {}

message Metric {
  string id = 1;
  enum Type {
    UNSPECIFIED = 0;
    GAUGE = 1;
    COUNTER = 2;
  }
  Type type = 2;
  double value = 3;
  int64 delta = 4;
}

message PingRequest {}

message PingResponse {}

message UpdateRequest {
  Metric metric = 1;
}

message UpdateResponse {
  Metric metric = 1;
}

message BatchUpdateRequest {
  repeated Metric metric = 1; 
}

message BatchUpdateResponse {}

message GetRequest {
  string name = 1;
}

message GetResponse {
  Metric metric = 1;
}

service Metrics {
  rpc List(ListRequest) returns (stream Metric);
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc BatchUpdate(BatchUpdateRequest) returns (BatchUpdateResponse);
  rpc Get(GetRequest) returns (GetResponse);
}